# voice_interaction

./: .gitignore  LICENSE  README.md
speech_to_text/: CMakeLists.txt  README.md  package.xml  requirements.txt
speech_to_text/config/: default.yaml
speech_to_text/launch/: bringup.launch.py
speech_to_text/scripts/: speech_to_text_node.py
text_to_speech/: CMakeLists.txt  README.md  package.xml  requirements.txt
text_to_speech/config/: default.yaml
text_to_speech/config/voices/: gtts.yaml  piper.yaml
text_to_speech/launch/: bringup.launch.py
text_to_speech/scripts/: find_device_ids.py  text_to_speech_node.py
text_to_speech/text_to_speech/: __init__.py  audio_player.py  tts.py  utils.py
text_to_speech/text_to_speech/backends/: __init__.py  gtts.py  piper.py
voice_interaction_msgs/: CMakeLists.txt  package.xml
voice_interaction_msgs/action/: Say.action
